# ICRA2020_RM_IHiter_Planning

./: Readme.md
localization/: CMakeLists.txt  laser_map.cpp  laser_map.h  localization.cpp  localization.h  nnmap.cpp  nnmap.h  particle_filter.cpp  particle_filter.h  test.cpp
localization/Dataset/20191218/: simul.rawlog  simul.rawlog.GT.txt  simul_LASER_SIM_times.txt  simul_odometry.txt
planning/: .ycm_extra_conf.py
planning/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
planning/devel/include/icra_nav/: add_ob_srv.h  add_ob_srvRequest.h  add_ob_srvResponse.h  c_path_srv.h  c_path_srvRequest.h  c_path_srvResponse.h  c_start_end_srv.h  c_start_end_srvRequest.h  c_start_end_srvResponse.h  path_srv.h  path_srvRequest.h  path_srvResponse.h  path_vector.h  punish.h  start_end_point.h  start_end_srv.h  start_end_srvRequest.h  start_end_srvResponse.h
planning/devel/include/roborts_msgs/: ArmorDetectionAction.h  ArmorDetectionActionFeedback.h  ArmorDetectionActionGoal.h  ArmorDetectionActionResult.h  ArmorDetectionFeedback.h  ArmorDetectionGoal.h  ArmorDetectionResult.h  BonusStatus.h  FricWhlRequest.h  FricWhlResponse.h  GameResult.h  GameStatus.h  GameSurvivor.h  GimbalAngle.h  GimbalMode.h  GimbalModeResponse.h  GimbalRate.h  GlobalPlannerAction.h  GlobalPlannerActionFeedback.h  GlobalPlannerActionGoal.h  GlobalPlannerActionResult.h  GlobalPlannerFeedback.h  GlobalPlannerGoal.h  GlobalPlannerResult.h  LocalPlannerAction.h  LocalPlannerActionFeedback.h  LocalPlannerActionGoal.h  LocalPlannerActionResult.h  LocalPlannerFeedback.h  LocalPlannerGoal.h  LocalPlannerResult.h  ObstacleMsg.h  ProjectileSupply.h  RobotBonus.h  RobotHeat.h  RobotShoot.h  RobotStatus.h  ShootCmd.h  ShootCmdResponse.h  ShootInfo.h  (+3 more)
planning/devel/share/common-lisp/ros/icra_nav/msg/: _package.lisp  _package_path_vector.lisp  _package_punish.lisp  _package_start_end_point.lisp  icra_nav-msg.asd  path_vector.lisp  punish.lisp  start_end_point.lisp
planning/devel/share/common-lisp/ros/icra_nav/srv/: _package.lisp  _package_add_ob_srv.lisp  _package_c_path_srv.lisp  _package_c_start_end_srv.lisp  _package_path_srv.lisp  _package_start_end_srv.lisp  add_ob_srv.lisp  c_path_srv.lisp  c_start_end_srv.lisp  icra_nav-srv.asd  path_srv.lisp  start_end_srv.lisp
planning/devel/share/common-lisp/ros/roborts_msgs/msg/: ArmorDetectionAction.lisp  ArmorDetectionActionFeedback.lisp  ArmorDetectionActionGoal.lisp  ArmorDetectionActionResult.lisp  ArmorDetectionFeedback.lisp  ArmorDetectionGoal.lisp  ArmorDetectionResult.lisp  BonusStatus.lisp  GameResult.lisp  GameStatus.lisp  GameSurvivor.lisp  GimbalAngle.lisp  GimbalRate.lisp  GlobalPlannerAction.lisp  GlobalPlannerActionFeedback.lisp  GlobalPlannerActionGoal.lisp  GlobalPlannerActionResult.lisp  GlobalPlannerFeedback.lisp  GlobalPlannerGoal.lisp  GlobalPlannerResult.lisp  LocalPlannerAction.lisp  LocalPlannerActionFeedback.lisp  LocalPlannerActionGoal.lisp  LocalPlannerActionResult.lisp  LocalPlannerFeedback.lisp  LocalPlannerGoal.lisp  LocalPlannerResult.lisp  ObstacleMsg.lisp  ProjectileSupply.lisp  RobotBonus.lisp  RobotDamage.lisp  RobotHeat.lisp  RobotShoot.lisp  RobotStatus.lisp  ShootInfo.lisp  ShootState.lisp  SupplierStatus.lisp  TwistAccel.lisp  _package.lisp  _package_ArmorDetectionAction.lisp  (+28 more)
planning/devel/share/mrobot_gazebo/cmake/: mrobot_gazeboConfig.cmake
planning/devel/share/qtros/cmake/: qtrosConfig.cmake
planning/devel/share/roborts_base/cmake/: roborts_baseConfig.cmake
planning/devel/share/roborts_bringup/cmake/: roborts_bringupConfig.cmake
planning/devel/share/roborts_camera/cmake/: roborts_cameraConfig.cmake
planning/devel/share/roborts_common/cmake/: roborts_commonConfig.cmake
planning/devel/share/roborts_costmap/cmake/: roborts_costmapConfig.cmake
planning/devel/share/roborts_decision/cmake/: roborts_decisionConfig.cmake
planning/devel/share/roborts_detection/cmake/: roborts_detectionConfig.cmake
planning/devel/share/roborts_localization/cmake/: roborts_localizationConfig.cmake
planning/devel/share/roborts_planning/cmake/: roborts_planningConfig.cmake
planning/devel/share/roborts_tracking/cmake/: roborts_trackingConfig.cmake
planning/devel/share/roseus/ros/icra_nav/: manifest.l
planning/devel/share/roseus/ros/roborts_msgs/: manifest.l
planning/src/RoboRTS-ros/roborts_base/: roborts_base_node.cpp
planning/src/RoboRTS-ros/roborts_base/chassis/: chassis.cpp  chassis.h
planning/src/RoboRTS-ros/roborts_base/config/: roborts_base_parameter.yaml
planning/src/RoboRTS-ros/roborts_base/gimbal/: gimbal.cpp
planning/src/RoboRTS-ros/roborts_base/roborts_sdk/protocol/: protocol.cpp
planning/src/RoboRTS-ros/roborts_bringup/: CMakeLists.txt
planning/src/RoboRTS-ros/roborts_bringup/launch/: base.launch
planning/src/RoboRTS-ros/roborts_bringup/rviz/: map.rviz
planning/src/icra_nav/: CMakeLists.txt  package.xml
planning/src/icra_nav/include/: Map.h  build_map.h  dstarlite.h  find_path.h  global_planning.h  navigation.h
planning/src/icra_nav/msg/: punish.msg
planning/src/icra_nav/src/: dynamic_obstacle.cpp  nav_node.cpp  path_planning.cpp  trans_odom.cpp  trans_odom1.cpp
planning/src/icra_nav/src/findpath/: build_map.cpp  find_path.cpp  global_planning.cpp
planning/src/icra_nav/src/navigation/: navigation.cpp
planning/src/icra_nav/srv/: add_ob_srv.srv  c_path_srv.srv  c_start_end_srv.srv  path_srv.srv  start_end_srv.srv
planning/src/mrobot_gazebo/: package.xml
planning/src/mrobot_gazebo/launch/: navdemo.launch  navdemo1.launch
planning/src/mrobot_gazebo/urdf/: mrobot.urdf0.xacro  mrobot.urdf1.xacro  mrobot.urdf2.xacro  mrobot.urdf3.xacro  mrobot_body00.urdf.xacro  mrobot_body01.urdf.xacro  mrobot_body02.urdf.xacro  mrobot_body03.urdf.xacro
planning/src/mrobot_gazebo/worlds/: ICRA2020.world  ICRA2020_old.world  icra2020_new.world
planning/src/qtros/: CMakeLists.txt  mainpage.dox  package.xml
planning/src/qtros/include/qtros/: main_window.hpp  qnode.hpp
planning/src/qtros/src/: main.cpp  main_window.cpp  qnode.cpp
planning/src/qtros/ui/: main_window.ui
(+66 files in other folders)
